# sentry-observability-fabric

./: .gitattributes  .gitignore  README.md  Taskfile.yml  flake.nix
.github/workflows/: verify.yml
deploy/: docker-compose.yml
deploy/prometheus/: prometheus.yml
sentinel/: Cargo.toml
sentinel/src/: main.rs
