[package]
name = "sentry-sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Richard J. Mussell <richardmussell.github.io>"]
description = "High-Performance Systems Exporter (NIST CA-7)"

[dependencies]
prometheus = "0.13" 
warp = "0.3"       
tokio = { version = "1.0", features = ["full"] } 
sysinfo = "0.29"   
anyhow = "1.0"     
tracing = "0.1"    
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
